--- a/css/estilos.css
+++ b/css/estilos.css
@@ -6,6 +6,6 @@ body
 }
 #cabecera
 {
-    background: #33A;
-    box-shadow: 0px 2px 20px 0px 
+    background: rgb(113, 113, 209);
+    box-shadow: 3px 2px 20px 0px 
 }
